--- a/index.html
+++ b/index.html
@@ -65,7 +65,77 @@
     <div>
         <img id="banner" src="img/banner_pic1.jpg" width="100%">
     </div>
+
+    <div class="container">
+      <h3 class="text-center">Our Services</h3>
+      <h5 class="text-center">Label Printing Machines</h5>
+      <div class="row">
+        <div class="col">
+          <a href="#"><img src="img/fav.png" width="100%"></a>
+        </div>
+        <div class="col">
+          <a href="#"><img src="img/fav.png" width="100%"></a>
+        </div>
+        <div class="col">
+          <a href="#"><img src="img/fav.png" width="100%"></a>
+        </div>
+        <div class="col">
+          <a href="#"><img src="img/fav.png" width="100%"></a>
+        </div>
+        <div class="col">
+          <a href="#"><img src="img/fav.png" width="100%"></a>
+        </div>
+        <div class="col">
+          <a href="#"><img src="img/fav.png" width="100%"></a>
+        </div>
+      </div>
+      <br>
+      <h5 class="text-center">Finish Machines</h5>
+      <div class="row">
+        <div class="col">
+          <a href="#"><img src="img/fav.png" width="100%"></a>
+        </div>
+        <div class="col">
+          <a href="#"><img src="img/fav.png" width="100%"></a>
+        </div>
+        <div class="col">
+          <a href="#"><img src="img/fav.png" width="100%"></a>
+        </div>
+        <div class="col">
+          <a href="#"><img src="img/fav.png" width="100%"></a>
+        </div>
+        <div class="col">
+          <a href="#"><img src="img/fav.png" width="100%"></a>
+        </div>
+        <div class="col">
+          <a href="#"><img src="img/fav.png" width="100%"></a>
+        </div>
+      </div>
+    </div>
+
     <div class="spacer"></div>
+    <div class="jumbotron">
+      <h2 class="text-center">Why Us?</h2>
+      <div class="row">
+        <div class="col">
+          <img src="img/icons/1w.png" width="60%" class="center">
+          <p class="text-center">Known as one of the leading industry-standard drafters</p>
+        </div>
+        <div class="col">
+          <img src="img/icons/2w.png" width="60%" class="center">
+          <p class="text-center">Expect timely and responsive services on a 24/7 basis</p>
+        </div>
+        <div class="col">
+          <img src="img/icons/3w.png" width="60%" class="center">
+          <p class="text-center">We offer custom mechanical solutions including money printing machines.</p>
+        </div>
+        <div class="col">
+          <img src="img/icons/4w.png" width="60%" class="center">
+          <p class="text-center">A flexible team to ensure fast delivery, after-sale issues solving.</p>
+        </div>
+      </div>
+    </div>
+
     <div class="container" >
       <h2>Company Introduction</h2>
       <p>Hebei Wanjie Machinery Technology Co., Ltd. founded in 1999, is located in northern China printing machinery production
@@ -90,13 +160,27 @@
         UAE, India, Ukraine, and Taiwan.</p>
     </div>
 
-    <h1>Wanjie Machinery Technology Co., Ltd.</h1>
+    <!-- <h1>Wanjie Machinery Technology Co., Ltd.</h1> -->
 
 
 
 
     <footer>
-      --
+      <div class="row" style="display: flex; justify-content: center; align-items: center;">
+        <div class="col">
+          <img src="img/wanjielogo_eng.png" width="100%">
+        </div>
+        <div class="col">
+          <h6>Wanjie Machinery</h6>
+          <p></p>
+        </div>
+        <div class="col">
+          <h6 class="text-center">Contact Info</h6>
+        </div>
+        <div class="col">
+          <h6 class="text-right">Sign Up</h6>
+        </div>
+      </div>
     </footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
