--- a/index.html
+++ b/index.html
@@ -59,27 +59,27 @@
     <nav class="navbar navbar-expand-sm navbar-light bg-none">
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-          <a href="#"><img src="img/wanjielogo.png" height="50px"></a>
+          <a href="index.html"><img src="img/wanjielogo_eng_b.png" height="50px"></a>
           <li class="nav-item">
-            <a class="nav-link" href="#">Home</a>
+            <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="about.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Products</a>
+            <a class="nav-link" href="products.html">Products</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Support</a>
+            <a class="nav-link" href="support.html">Support</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">News</a>
+            <a class="nav-link" href="news.html">News</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="contact.html">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link quote" href="#">Get a Quote!</a>
+            <a class="nav-link quote" href="#quote">Get a Quote!</a>
           </li>
         </ul>
       </div>
@@ -215,6 +215,8 @@
           </div>
         </div>
       </div>
+
+      <div id="quote"></div>
       <div class="spacer"></div>
       
       <div class="fader-gradient">
@@ -287,7 +289,7 @@
     <footer>
       <div class="row" style="display: flex; justify-content: center; align-items: center;">
         <div class="col">
-          <img src="img/wanjielogo_eng.png" width="100%">
+          <img src="img/wanjielogo_eng2.png" width="100%">
         </div>
         <div class="col">
           <h6>Wanjie Machinery</h6>
@@ -296,9 +298,27 @@
         </div>
         <div class="col">
           <h6 class="text-center">Contact Info</h6>
+          <p class="text-center"><b>Email</b>: info@wanjiemachine.com<br><b>Tel</b>: 0086-315-6166085<br><b>Fax</b>: 0086-315-6198629</p>
+          <p class="text-center"><b>Address</b><br>Caitingqiao Industrial Park, Yutian County, Tangshan City, Hebei Province, P.R.China</p>
         </div>
         <div class="col">
-          <h6 class="text-right">Sign Up</h6>
+          <h6 class="text-center">Sign Up for Updates!</h6>
+          <div class="form-row">
+            <div class="col text-center">
+              <label for="name">Name</label>
+              <input type="text" aria-label="Name" class="form-control" id="name" required>
+            </div>
+          </div>
+          <div class="spacer-s"></div>
+          <div class="form-row">
+            <div class="col text-center">
+              <label for="email2">Email</label>
+              <input type="email" aria-label="Email" class="form-control" id="email2" required>
+            </div>
+          </div>
+          <div class="text-center spacer-s">
+            <button type="submit" class="btn btn-custom">Sign Up</button>
+          </div>
         </div>
       </div>
     </footer>
