News.html 75% done (3/6). Thinking of Product.html and maybe About.html

--- a/index.html
+++ b/index.html
@@ -59,10 +59,7 @@
     <nav class="navbar navbar-expand-sm navbar-light bg-none">
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-          <a href="index.html"><img src="img/wanjielogo_eng_b.png" height="50px"></a>
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
-          </li>
+          <a href="index.html"><img src="img/wanjielogo_eng_b_logo.png" height="50px" style="margin-right: 20px;"></a>
           <li class="nav-item">
             <a class="nav-link" href="about.html">About</a>
           </li>
@@ -84,6 +81,14 @@
         </ul>
       </div>
     </nav>
+
+    <div class="jumbotron" style="margin-bottom: 0; padding: 50px">
+      <!-- <h1 class="text-center">Wangjie Machinery</h1> -->
+      <img src="img/wanjielogo_eng.png" width="500px" class="center">
+      <div class="spacer-s"></div>
+      <p class="text-center">Wanjie Machinery Technology Co., Ltd</p>
+    </div>
+
     <div class="spacer"></div>
     <div>
         <img id="banner" src="img/banner_pic1.jpg" width="100%">
@@ -142,18 +147,22 @@
       <div class="row">
         <div class="col">
           <img src="img/icons/1w.png" width="60%" class="center">
+          <div class="spacer-s"></div>
           <p class="text-center">Known as one of the leading industry-standard drafters</p>
         </div>
         <div class="col">
           <img src="img/icons/2w.png" width="60%" class="center">
+          <div class="spacer-s"></div>
           <p class="text-center">Expect timely and responsive services on a 24/7 basis</p>
         </div>
         <div class="col">
           <img src="img/icons/3w.png" width="60%" class="center">
+          <div class="spacer-s"></div>
           <p class="text-center">We offer custom mechanical solutions including money printing machines.</p>
         </div>
         <div class="col">
           <img src="img/icons/4w.png" width="60%" class="center">
+          <div class="spacer-s"></div>
           <p class="text-center">A flexible team to ensure fast delivery, after-sale issues solving.</p>
         </div>
       </div>
