--- a/news.html
+++ b/news.html
@@ -37,35 +37,201 @@
   </head>
   <body onload="startTimer()" class="hider">
     <nav class="navbar navbar-expand-sm navbar-light bg-none">
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <a href="index.html"><img src="img/wanjielogo_eng_b.png" height="50px"></a>
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="products.html">Products</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="support.html">Support</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="news.html">News</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link quote" href="#quote">Get a Quote!</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <a href="index.html"><img src="img/wanjielogo_eng_b_logo.png" height="50px" style="margin-right: 20px;"></a>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="products.html">Products</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="support.html">Support</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="news.html">News</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link quote" href="index.html#quote">Get a Quote!</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
 
     <!-- CONTENT GOES HERE -->
+    <div class="jumbotron">
+        <h1 class="text-center">News</h1>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-7">
+                <!-- Static 'Article' 1 -->
+                <div class="news">
+                    <img src="img/map.png" width="100%">
+                    <div class="spacer"></div>
+                    <h4>Article Title 1</h4>
+                    <p>Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. </p>
+                    <p>Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. </p>
+                    <p>Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. </p>
+                    <div class="sm center">
+                        <p class="text-center">Share this on...</p>
+                        <div style="text-align: center;">
+                            <a href="#"><img class="sm-icon" src="img/icons/facebook.png"></a>
+                            <a href="#"><img class="sm-icon" src="img/icons/twitter.png"></a>
+                            <a href="#"><img class="sm-icon" src="img/icons/linkedin.png"></a>
+                            <a href="#"><img class="sm-icon" src="img/icons/tiktok.png"></a>
+                        </div>
+                        <div class="spacer"></div>
+                    </div>
+                </div>
+
+                <!-- Static 'Article' 2 -->
+                <div class="news">
+                    <img src="img/map.png" width="100%">
+                    <div class="spacer"></div>
+                    <h4>Article Title 2</h4>
+                    <p>Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. </p>
+                    <p>Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. </p>
+                    <p>Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. </p>
+                    <div class="sm center">
+                        <p class="text-center">Share this on...</p>
+                        <div style="text-align: center;">
+                            <a href="#"><img class="sm-icon" src="img/icons/facebook.png"></a>
+                            <a href="#"><img class="sm-icon" src="img/icons/twitter.png"></a>
+                            <a href="#"><img class="sm-icon" src="img/icons/linkedin.png"></a>
+                            <a href="#"><img class="sm-icon" src="img/icons/tiktok.png"></a>
+                        </div>
+                        <div class="spacer"></div>
+                    </div>
+                </div>
+
+                <!-- Static 'Article' 3 -->
+                <div class="news">
+                    <img src="img/map.png" width="100%">
+                    <div class="spacer"></div>
+                    <h4>Article Title 3</h4>
+                    <p>Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. </p>
+                    <p>Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. </p>
+                    <p>Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. </p>
+                    <div class="sm center">
+                        <p class="text-center">Share this on...</p>
+                        <div style="text-align: center;">
+                            <a href="#"><img class="sm-icon" src="img/icons/facebook.png"></a>
+                            <a href="#"><img class="sm-icon" src="img/icons/twitter.png"></a>
+                            <a href="#"><img class="sm-icon" src="img/icons/linkedin.png"></a>
+                            <a href="#"><img class="sm-icon" src="img/icons/tiktok.png"></a>
+                        </div>
+                        <div class="spacer"></div>
+                    </div>
+                </div>
+
+                <!-- Static 'Article' 4 -->
+                <div class="news">
+                    <img src="img/map.png" width="100%">
+                    <div class="spacer"></div>
+                    <h4>Article Title 4</h4>
+                    <p>Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. </p>
+                    <p>Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. </p>
+                    <p>Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. </p>
+                    <div class="sm center">
+                        <p class="text-center">Share this on...</p>
+                        <div style="text-align: center;">
+                            <a href="#"><img class="sm-icon" src="img/icons/facebook.png"></a>
+                            <a href="#"><img class="sm-icon" src="img/icons/twitter.png"></a>
+                            <a href="#"><img class="sm-icon" src="img/icons/linkedin.png"></a>
+                            <a href="#"><img class="sm-icon" src="img/icons/tiktok.png"></a>
+                        </div>
+                        <div class="spacer"></div>
+                    </div>
+                </div>
+
+                <!-- Static 'Article' 5 -->
+                <div class="news">
+                    <img src="img/map.png" width="100%">
+                    <div class="spacer"></div>
+                    <h4>Article Title 5</h4>
+                    <p>Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. </p>
+                    <p>Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. </p>
+                    <p>Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. </p>
+                    <div class="sm center">
+                        <p class="text-center">Share this on...</p>
+                        <div style="text-align: center;">
+                            <a href="#"><img class="sm-icon" src="img/icons/facebook.png"></a>
+                            <a href="#"><img class="sm-icon" src="img/icons/twitter.png"></a>
+                            <a href="#"><img class="sm-icon" src="img/icons/linkedin.png"></a>
+                            <a href="#"><img class="sm-icon" src="img/icons/tiktok.png"></a>
+                        </div>
+                        <div class="spacer"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-5">
+                <div class="container" style="height: 300px">
+                    <h5 class="text-center">Post Categories</h5>
+                    <p class="text-center">?</p>
+                </div>
+                
+                <div class="container">
+                    <h5 class="text-center">Recent Posts</h5>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <img style="border-radius: 10px" src="img/map.png" width="100%">
+                        </div>
+                        <div class="col-md-6">
+                            <h6>Paving the way for international label printing</h6>
+                            <a class="button-link" style="font-weight: 100;" href="#">Read More</a>
+                        </div>
+                    </div>
+                    <div class="spacer"></div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <img style="border-radius: 10px" src="img/map.png" width="100%">
+                        </div>
+                        <div class="col-md-6">
+                            <h6>Paving the way for international label printing</h6>
+                            <a class="button-link" style="font-weight: 100;" href="#">Read More</a>
+                        </div>
+                    </div>
+                    <div class="spacer"></div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <img style="border-radius: 10px" src="img/map.png" width="100%">
+                        </div>
+                        <div class="col-md-6">
+                            <h6>Paving the way for international label printing</h6>
+                            <a class="button-link" style="font-weight: 100;" href="#">Read More</a>
+                        </div>
+                    </div>
+                    <div class="spacer"></div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <img style="border-radius: 10px" src="img/map.png" width="100%">
+                        </div>
+                        <div class="col-md-6">
+                            <h6>Paving the way for international label printing</h6>
+                            <a class="button-link" style="font-weight: 100;" href="#">Read More</a>
+                        </div>
+                    </div>
+                    <div class="spacer"></div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <img style="border-radius: 10px" src="img/map.png" width="100%">
+                        </div>
+                        <div class="col-md-6">
+                            <h6>Paving the way for international label printing</h6>
+                            <a class="button-link" style="font-weight: 100;" href="#">Read More</a>
+                        </div>
+                    </div>
+                    <div class="spacer"></div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <footer>
       <div class="row" style="display: flex; justify-content: center; align-items: center;">
