--- a/products.html
+++ b/products.html
@@ -37,35 +37,35 @@
   </head>
   <body onload="startTimer()" class="hider">
     <nav class="navbar navbar-expand-sm navbar-light bg-none">
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <a href="index.html"><img src="img/wanjielogo_eng_b.png" height="50px"></a>
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="products.html">Products</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="support.html">Support</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="news.html">News</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link quote" href="#quote">Get a Quote!</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <a href="index.html"><img src="img/wanjielogo_eng_b_logo.png" height="50px" style="margin-right: 20px;"></a>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="products.html">Products</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="support.html">Support</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="news.html">News</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link quote" href="index.html#quote">Get a Quote!</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
 
     <!-- CONTENT GOES HERE -->
+    <div class="jumbotron" style="margin-bottom: 0;">
+        <h1 class="text-center">Products</h1>
+     </div>
 
     <footer>
       <div class="row" style="display: flex; justify-content: center; align-items: center;">
