--- a/contact.html
+++ b/contact.html
@@ -36,13 +36,10 @@
     <title>Wanjie Technology | Official Website</title> <!-- CHANGE THIS APPROPRIATELY -->
   </head>
   <body onload="startTimer()" class="hider">
-    <nav class="navbar navbar-expand-sm navbar-light bg-none">
+   <nav class="navbar navbar-expand-sm navbar-light bg-none">
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-          <a href="index.html"><img src="img/wanjielogo_eng_b.png" height="50px"></a>
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
-          </li>
+          <a href="index.html"><img src="img/wanjielogo_eng_b_logo.png" height="50px" style="margin-right: 20px;"></a>
           <li class="nav-item">
             <a class="nav-link" href="about.html">About</a>
           </li>
@@ -59,7 +56,7 @@
             <a class="nav-link" href="contact.html">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link quote" href="#quote">Get a Quote!</a>
+            <a class="nav-link quote" href="index.html#quote">Get a Quote!</a>
           </li>
         </ul>
       </div>
